--- a/iframe/index.html
+++ b/iframe/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
   <html>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
     </head>
     <body>
