--- a/iframe/index.html
+++ b/iframe/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-  <html>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <head>
-    </head>
-    <body>
-      <style>
-        #main {
-          height: 100%;
-        }  
-      </style>
-      <div id="main"></div>
-      <script type="module" src="bundle.js"></script>
-    </body>
-  </html>
+<html>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+  </head>
+  <body>
+    <style>
+      #main {
+        height: 100%;
+      }
+    </style>
+    <div id="main"></div>
+    <script type="module" src="dist/bundle.js"></script>
+  </body>
+</html>
